# bpoptima

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/endpoints/: auth.py  jobs.py
app/core/: config.py  security.py
app/db/: session.py
app/db/models/: job.py  user.py
app/schemas/: job.py  user.py
app/services/: file_processor.py
app/workers/: tasks.py
docker/: redis.conf
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/pages/: Dashboard.jsx  Login.jsx
